Added Lesley matrices

--- a/BioMath.tex
+++ b/BioMath.tex
@@ -16,13 +16,13 @@
 \tableofcontents
 \section{Why systems?}
 
-Biology as traditionally been the science without mathematics, a place where the non-mathematically oriented soul could develop a scientific career far from the trials and tribulations of linear Algebra, differential calculus and complex analysis. This way of thinking remained dominant in the field until the end of the twentieth century and the sequencing of the human genome. Then, biologists found themselves drowning in data. Genomic sequences provided a list of all the relevant parts needed to build and operate a cell and, by extension, a full living being. But connecting all those parts and the relevant regulatory signals, also present in the genome, proved to be impossible due to several reasons. First, the sheer number of components, in the tens of thousands, were very difficult to represent using conventional means, such as diagrams, lists or sketches in a blackboard. Second, acting on a component that is part of a network initiates the propagation of multiple signals criss-crossing one another and doubling back onto themselves in ways that are very difficult to follow. Third, when the nature of interaction between all the components is quantitative, the same kind of action (inhibiting a step of a pathway) can lead to very different outcomes depending on the intensity of the stimulus. Finally, the combination of these three effects often results counter-intuitive behaviors.
+Biology as traditionally been the science without mathematics, a place where the non-mathematically oriented  could develop  scientific careers far from the trials and tribulations of linear Algebra, differential calculus and complex analysis. This way of thinking remained dominant in the field until the end of the twentieth century and the sequencing of the human genome. Then, biologists found themselves drowning in data. Genomic sequences provided a list of all the relevant parts needed to build and operate a cell and, by extension, a full living being. But connecting all those parts and the relevant regulatory signals, also present in the genome, proved to be impossible due to several reasons. First, the sheer number of components, in the tens of thousands, were very difficult to represent using conventional means, such as diagrams, lists or sketches in a blackboard. Second, acting on a component that is part of a network initiates the propagation of multiple signals criss-crossing one another and doubling back onto themselves in ways that are very difficult to follow. Third, when the nature of interaction between all the components is quantitative, the same kind of action (inhibiting a step of a pathway) can lead to very different outcomes depending on the intensity of the stimulus. Finally, the combination of these three effects often results counter-intuitive behaviors.
 
 Fortunately for modern biology, these problems had already been encountered in the domain of engineering. The study of machines formed by many different components into a network of complex interactions started in the years following world war II and continued with great intensity in the following decades. The discipline that resulted from this was called systems theory, and its incredible success fueled an era of technological innovation in fields as diverse as mechanics, electronics and chemical engineering.
 
-At the heart of systems Theory is the definition of a system as an ensemble of components connected in a certain manner and limited by boundary. signals and materials can cross the boundary into the system -- inputs -- or out of it -- outputs.
+At the heart of systems Theory is the definition of a system as an ensemble of components connected in a certain manner and limited by a boundary. signals and materials can cross the boundary into the system -- inputs -- or out of it -- outputs.
 
-As a complex system with numerous inter-connected components, social and economic systems rich sources of surprising behaviors. lets assume I replace all the light bulbs in my home with power saving leds that consume half as much electricity. With such a measure, I will reduce lower my immediate electricity consumption and save money. In light of these effects, which are short-term and local, I might be temped to think that I am contributing to an overall reduction in energy consumption in my community. Experience, however, show the contrary. The development and adoption of machines that are more efficient tends to increase the overall consumption in the long run. My modest action changing light bulbs at home, modifies a very intricate system and signals start rippling throug it. a reduction in electricity demmand lowers its price and frees kilowatts that can be sent elsewhere. The utility company can sell the surplus electricity at a lower price for industrial purposes, so it will be used anyway. Moreover, producing energy has an energy cost so the energy I am not using at home can be redirected to oil extraction or the construction of new solar panels. This, together with the invention of more efficient engines and machinery lowers the cost of oil extraction, which, in turn enables more energy production at cheaper prices that incentivate consumers to use more energy. In the long term, I might end up  buying new appliances and using all the electricity I saved by changing the bulbs, maybe even more! This phenomenom is called the Jevons paradox and, if we are surprised by it is due to our innate tendency to think both local and short term. If I place the boundary of my system along the walls of my home, I am not taking into account the effects of my actions on other actors, like my neighbors or the appliance company. These effects, will eventually double back on me in the long term through things such as lower electricity prices, power discounts and fancy new appliances.
+As a complex system with numerous inter-connected components, social and economic systems are  rich sources of surprising behaviors. lets assume I replace all the light bulbs in my home with power saving leds that consume half as much electricity. With such a measure, I will  lower my immediate electricity consumption and save money. In light of these effects, which are short-term and local, I might be temped to think that I am contributing to an overall reduction in energy consumption in my community. Experience, however, shows the opposite. The development and adoption of machines that are more efficient tends to increase the overall consumption in the long run. My modest action changing light bulbs at home, modifies a very intricate system and signals start rippling through it. A reduction in electricity demand of homes, frees kilowatts that can be sent elsewhere. The utility company can sell the surplus electricity at a lower price for industrial purposes, so it will be used anyway. So beyond the boundary of my neighborhood, there is a bigger system that includes power plants, factories and much more. This bigger system, has compensated my reduction in power consumption with an equal increase somewhere else. Moreover, producing energy has an energy cost so the energy that has gone to industrial purposes can be redirected to oil extraction or the construction of new solar panels. This, together with the invention of more efficient engines and machinery lowers the cost of oil extraction, which, in turn enables more energy production at cheaper prices that incentivate consumers to use more energy. In the long term, I might end up  buying new appliances that consume as much electricity as I saved before, maybe even more! So the long term effects ofmy action end up contradicting my initial intention. This phenomenom is called the Jevons paradox and, if we are surprised by it is due to our innate tendency to think both local and short term. If I place the boundary of my system along the walls of my home, I am not taking into account the effects of my actions on other actors, like my neighbors or the appliance company. These effects, will eventually double back on me in the long term through things such as lower electricity prices, power discounts and fancy new appliances.
 
 Just as the Jevons paradox may result in unpredictable consequences due to the complexity of social systems, so can happen with ecological, physiological and biochemical systems. Lets have a look at medical treatments and their side effects. Cortisol is a common treatment used to prevent strong inflammatory or immune responses, and patients undergoing such treatment exhibits a symptom commonly known as ``moon face''. The face of the patient acquires a rounder than usual form due to the accumulation of fat on the cheeks and around the throat. The cause for this effect is, surprisigly, that cortisol boosts metabolism and burns calories. The sudden consumption of energy in the form of carbohydrates triggers a response to store more energy in the form of fat-tissue. What are the factors that favor this side effect? Is everybody equally vulnerable to it? Is there a genetic predisposition? Why the face? Will any metabolic boost result in fat accumulation? In order to answer any of these questions, we need systems theory.
 
@@ -31,18 +31,14 @@ Just as the Jevons paradox may result in unpredictable consequences due to the c
 
 There is no question that complicated networks of interacting components have to be carefully studied in order to understand how they work. Any biologist has spent a significant amount of time studying such intricate networks and memorizing carefully drawn diagrams of metabolic fluxes, regulatory interactions, gene expression, hormone effects, immunologic responses or food-webs. Even though this memorization effort is clearly necessary, we have just seen why it is not sufficient. So as long as we limit our approach to elucidate, draw and memorize these complex networks, we are just deluding themselves into  believing we know something that we do not.
 
-But biologists are luck,y for there is another group of specialists that has already faced similar difficulties and has been reasonably successful dealing with them. Engineers have developed precise tools for drawing diagrams, making calculations on how signal propagate and making quantitative predictions based on them. Many of these tools have already been translated to biological systems and this has resulted in the creation of new fields such as bioinformatics, computational neuro-science or systems biology. The emergence of these new fields has resulted in a much better understanding of complex biological problems such as biochemical and genetic regulation, cognitive processes and mental illness, but it has also resulted in productive exchanges for other sciences such as artificial neural networks, which are at the center of recent developments in artificial intelligence.
+But biologists are lucky for there is another group of specialists that has already faced similar difficulties and has been reasonably successful dealing with them. Engineers have developed precise tools for drawing diagrams, making calculations on how signal propagate and making quantitative predictions based on them. Many of these tools have already been translated to biological systems and this has resulted in the creation of new fields such as bioinformatics, computational neuro-science or systems biology. The emergence of these new fields has resulted in a much better understanding of complex biological problems such as biochemical and genetic regulation, cognitive processes and mental illness, but it has also resulted in productive exchanges for other sciences such as artificial neural networks, which are at the center of recent developments in artificial intelligence.
 
 % diagrams I/O example
 \section{The mathematics of growth, evolution and change}
 
-\section{Dealing with many things at once: vectors and matrices}
-
-%diagram -> vectors -> matrix -> matrix-product
-
 \subsection{Discrete dynamic systems}
 
-Growth is one of the main characteristics of biological systems. All living beings grow at least during a part of their life cycle with most keeping sustained growth through it all. During biological growth, some property of the system -- size, number of individuals, biomass, radius of a tumor dots - increases with time.Lets call this property, $x$. We can indicate that x changes with time by writing it as a function $x(t)$ or as a series $x_t = x_1, x_2, x_3,\dots$ with $x_i$ being the value of x after i time units.
+Growth is one of the main characteristics of biological systems. All living beings grow at least during a part of their life cycle with most keeping sustained growth through it all. During biological growth, some property of the system -- size, number of individuals, biomass, radius of a tumor \dots - increases with time. Lets call this property, $x$. We can indicate that x changes with time by writing it as a function $x(t)$ or as a series $x_t = x_1, x_2, x_3,\dots$ with $x_i$ being the value of x after i time units.
 
 The simplest problems to analyze mathematically are those that happen at discrete intervals in time. For instance, if a population of microbes duplicates every hour, then the population at time $t+1$ will be twice the population at time $t$.
 
@@ -59,7 +55,7 @@ x_{t} = 2^t \, x_0
 
 this is so simple that we hardly need any math!
 
-Now we move on to a slightly more complicated case. The radius of a tumor increases at a rate of  15 \% every hour, what is the doubling time of the tumor? The general form of equation \ref{geomgrowth_example} is
+Now we move on to a slightly more complicated case. The radius of a tumor increases at a rate of  15 \% every hour, what is the doubling time of the tumor? The general form of equation \ref{geomgrowth_example} for a growth rate $r$ is:
 
 \begin{equation}
 \label{geomgrowth_general}
@@ -74,7 +70,7 @@ x_{t} = (1 + r)^{t} \, x_0
 \end{equation}
 
 
-this is called \textbf{geometric growth} with $r=0.15$ for our tumor. Now if the time it takes for x to duplicate is $t_d$,
+this is called \textbf{geometric growth} with $r=0.15$ for our tumor. Biologists often describe growth using its doubling time, $t_d$,  which is the time needed for the system to duplicate ts size:
 
 \begin{equation}
 2\, x_{0} = (1 + r)^{t_d} \, x_0
@@ -88,16 +84,93 @@ t_d = \frac{\log 2}{\log (1 + r) }
 
 So our doubling time for $r=0.15$ is 1.74 hours, about an hour and 45 min.
 
-But not all individuals in a population are identical. Most of the time, biological populations have many different types of individuals. Cells differentiate into types, animals grow in different stages, microbes can form spores \dots Fortunately, we have the mathematical tools to reflect that diversity. Consider a population of parasites that reproduce through eggs. Every week, some eggs hatch and produce new parasites that in time will produce more eggs. We can easily capture the idea of our population having two different components: animals of species $x$ and eggs of species $x$ by using vectors:
+\subsection{Dealing with many things at once: vectors and matrices}
+
+The  individuals in a population are not always identical. Most of the time, biological populations have many different types of individuals. Cells differentiate into types, animals grow in different stages, microbes can form spores \dots Fortunately, we have the mathematical tools to reflect that diversity. Consider a population of parasites that reproduce through eggs. Every week, some eggs hatch and produce new parasites that in time will produce more eggs. We can easily capture the idea of our population having two different individuals: eggs, $x_1$ and animals, $x_2$. When we want to refer to all individuals of the species, regardless of their type, we will use verctor $\mathbf{x}$.
 
 \begin{equation}
 \mathbf{x} =\left( \begin{array}{c} x_1 \\  x_2 \end{array} \right)
 \end{equation}
 
-A vector of dimension $n$ are just collections of $n$ ``normal'' numbers which, by the way are caller scalars. 
+A vector of dimension $n$ are just collections of $n$ ``normal'' numbers which, by the way are caller scalars. So the members of the total population is vector  $\mathbf{x}$ and it is composed of $x_1$ eggs and $x_2$ animals. we write vectors and matrices (see below) in \textbf{boldface}.
 
 
+When we study the dynamics of this population, we will see why it was so important to keep the two types separate. The number of eggs produced each generation does not depend on the number of eggs present in it. Eggs are laid by the animals, so the more animals there are, the more eggs are produced:
 
+\begin{equation}
+x_1 = f_{1} \\  x_2 
+\end{equation}
+
+where $f_1$ is the fecundity of the animals ($x_2$). The production of new animals is also dependent of the fraction of eggs that survive the incubation period so for a survival ratio $s_1$:
+
+\begin{equation}
+	x_2 = s_{1} \\  x_1 
+\end{equation}
+
+In this simple case, we can just work with the two equations, but as the complexity of the population increases, we have to find a more efficient method to handle our calculations. Lets assume we are studying a population of mice with three different age groups: young  mice up to one year old, $n_1$ can reproduce at very low rates, mice between 1 and 1.5 years old, $n_2$ are adults in their prime and old mice up to two years old $n_3$ have more fragile health, which leads to lower fecundity. we can summarize this information making a drawing, as shown in figure \ref{fig:mice}.
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=0.5\textwidth]{Mouse_pop_graph}
+	\end{center}
+	\caption{Dynamics of a population of mice. Circles contain the three age groups that are connected by arrows showing how one population affects the growth of another. $f_3$ is the fecundity of old mice, $n_3$, while $s_1$ is the fraction of young mice that survive to adulthood.}
+	\label{fig:mice}
+\end{figure}
+ 
+The figures show clearly that the increase in young mice, $n_1$, for each generation will depend on the fecundities of all three age groups, while the growth of old mice $n_3$, only depends on the survival of adult mice $n_2$. but even as the arrows clearly show which population affects which through the arrows, how do we write our equations? Fortunately, mathematics has a simple tool to transform drawings into numbers: matrices.
+
+A matrix is just a square of numbers that connects elements represented in its columns to elements represented in its rows. Since our drawing connects the three elements $n_1$, $n_2$,$n_2$ to one another, we will have a row and a column for each. Lets start making such a square and fill it with zeroes:
+
+\begin{center}
+\begin{tabular}{c|ccc}
+	& $n_1$ & $n_2$ & $n_3$ \\
+	\hline 
+	$n_1$ &0	&0	&0	\\
+	$n_2$ &0	&0	&0	\\
+	$n_3$ &0	&0	&0	\\
+\end{tabular}
+\end{center}
+
+And now, we will place a number for each arrow in the drawing. The starting point of the arrow will be the column where we place the number and the ending point of the arrow wil be the column. Our table will look like this.
+
+\begin{center}
+	\begin{tabular}{c|ccc}
+		& $n_1$ & $n_2$ & $n_3$ \\
+		\hline
+		$n_1$ &$f_1$	&$f_2$	&$f_3$	\\
+		$n_2$ &$s_1$	&0	&0	\\
+		$n_3$ &0	&$s_2$	&0	\\
+	\end{tabular}
+\end{center}
+
+So the fecundity $f_3$ connects $n_3$ (column) to $n_1$ (row) and so on. We do not Normally use the titles for row and columns, so we would write our matrix as:
+
+\begin{equation}
+\mathbf{L} =	\begin{pmatrix}
+		f_1	&f_2	&f_3	\\
+		s_1	&0	&0	\\
+		0	&s_2	&0
+	\end{pmatrix}
+\end{equation}
+
+Now it is very easy to get the equations, since vectors and matrices have their own mathematical operations. we can now write our euqation ofr the population at a certain time as:
+
+\begin{equation}
+	\mathbf{n_{t+1}} =\mathbf{L} \, \mathbf{n_t}
+	\label{fig:matequationL}
+\end{equation}
+
+If we apply the product between vectors and matrices as we learned in high school, we will see that:
+
+\begin{equation}
+	 	\begin{pmatrix}
+		f_1	&f_2	&f_3	\\
+		s_1	&0	&0	\\
+		0	&s_2	&0
+	\end{pmatrix} \cdot \begin{pmatrix} n_{1,t}\\ n_{2,t} \\ n_{3,t}\end{pmatrix} = \begin{pmatrix} f_1 \,n_{1,t} + f_2 \,n_{2,t} + f_3 \,n_{3,t}\\ s_1 \, n_{1,t} \\ s_2 \, n_{2,t}\end{pmatrix}
+\end{equation}
+
+So equation \ref{fig:matequationL} shows a very useful fact. a matrix is an object that convert a vector into another. Here we use it to convert the population now into the future population, but if we represent anything by a vector -- e.g the direction and intensity of a ray of light -- we can represent changes in ts state by a matrix multiplication --e.g. the direction and intensity of the light after passing through liquid medium. This capacity of abstraction is what makes mathematics so powerful in science and engineering. Solving a problem oce in a field like physics means solving hundreds of problems in other fields. In our case of a population of animals, for instance, we may wonder how it is going to change in the future. we may wonder if the structure of the population will remain constant or the distribution of age will keep changing for ever? This kind of questions are also very relevant for economists and social scientists. will the population of developed countries continue to get older? or will the aging stop at some point? The solution to this question is important since all our pensions depend on it. Surprisingly enough, the answer to this question was already found before it was asked, when Leonard Euler studied the rotation of rigid bodies in the 18$^th$ century \dots 
 \subsection{Continuous dynamic systems}
 
 A differential equation is an equality involving one or more unknowns ($x$, $y$, $z$,\dots) and their derivatives. Since our unknowns have derivatives, they are not just numbers like in regular -- a.k.a. algebraic -- equations. Our unknowns are functions or, more accurately, families of functions. We can make this explicit by writing our unknowns as $x(t)$, $y(t)$, $z(t)$,\dots thus sacrificing brevity for the sake of clarity. In the text that follows, very little effort will be made to maintain consistency between these two notations and we will wantonly switch between both. Live with it.
